<resources>
    <string name="app_name">PERLS</string>
    <string name="exercise">EXERCISE</string>
    <string name="review">REVIEW REFLECTION</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="feeling_angry">Alright, so you are feeling Angry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="congrats">Congratulations, you finished the exercise!!!! Please review the exercise you just did</string>
    <string name="review_reflection">Review/Reflection</string>
    <string name="timer">0:30</string>
    <string name="go_to_reflection">Go to Reflection</string>
    <string name="done">Done</string>
    <string name="selection_prompt">Which of the following best describes how you are feeling?</string>
    <string name="emotion">Emotion</string>
    <string name="annoyed">Annoyed</string>
    <string name="irritated">Irritated</string>
    <string name="frustrated">Frustrated</string>
    <string name="aggrevated">Aggravated</string>
    <string name="irate">Irate</string>
    <string name="enraged">Enraged</string>

    <string name="q1">What were you reacting to?</string>
    <string name="q2">What were you thinking at the time?</string>
    <string name="q3">What were you feeling at the time?</string>
    <string name="q4">Did you feel your emotion was a valid reaction to the situation?</string>
    <string name="q5">What was your urge to act on this emotion?</string>
    <string name="action">What was the opposite action to what you felt?</string>
    <string name="reflection">How did you feel after the exercise?</string>


    <string name="oa_l1">Opposite action is a technique where you do the exact opposite of what you are feeling. Sounds weird, right? I know.</string>

    <string name="oa_l2">To understand why this skill works so well, you need to understand that every emotion has an action urge. The whole point of having emotions is that they get you to do things. \n For example, fear gets you to run away, anger gets you to fight, shame gets you to hide, etc. Every emotion has an action. Emotions are useful - most of the time. For example, if you are in a dangerous place, fear mobilizes your body\'s resources to flee or problem solve to get out of the situation. When the action fits the situation (e.g., fits the facts) you want to act on the emotion.</string>

    <string name="oa_l3">But what about when the emotion does not fit the situation? For example, when you feel fearful, but the situation is not one where you are in actual danger. Or when you feel angry, because you feel slighted by your friend, but you know they still really care about you. In these cases, it can make sense to not use the emotion urge because acting on it might be ineffective (e.g., losing a friend because you have an outburst, avoiding an important obligation because you are afraid). Every emotion also has an opposite action, which can at times be way more effective.</string>

    <string name="oa_l4">When you feel sad and depressed, you want to stay in your room and don\'t want to get out. This is isolation. To change your sadness, you have to do the opposite which is to activate. Get yourself doing things. This is the opposite to staying in bed all days.</string>

    <string name="oa_l5">Sometimes you do opposite action, even when the emotion fits the facts. \n Here\'s another example. Imagine you are up on a mountain and you get stuck - in front of you is a big drop and behind you are some animals that have traced your scent. You feel fear because of the drop and want to head back down the way you came, but the animals will surely attack and kill you. Faced with these options, you decide to jump because it\'s a more effective solution - you might get hurt, but you probably won\'t die. It\'s also the opposite action to fear (avoid).</string>

    <string name="oa_l6">Every emotion has an action urge, which means every emotion has an opposite action. \n Let\'s look at those right now.</string>

    <string name="oa_l7">Say you are angry and you want to fight or attack. \n An opposite action would be to gently withdraw, imagine seeing from the other person\'s point of view.</string>
    <string name="skip_lesson">Skip lesson</string>
    <string name="select_exercise">Please select an exercise to do</string>
    <string name="opposite_action">Opposite Action</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="audio">Progress Muscle Relaxation</string>
    <string name="welcome_oa">This exercise is a technique where you do the exact opposite of what you are feeling.\n Let\'s start</string>
    <string name="welcome_ps">This exercise is a technique to reduce or change how you are feeling by figuring out what is the actual problem to be solved.\n Let\'s start</string>
    <string name="more_exercise">More exercise</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="audio_exercise">Audio Exercise</string>
    <string name="audio_text">This Progressive Muscle Relaxation Exercise helps you relax and lower your stress levels</string>
    <string name="tipp_text">This exercise can help you change intense emotions quickly using your body chemistry.</string>
    <string name="tt">Tip the Temperature</string>
    <string name="ie">Intense Exercise</string>
    <string name="pb">Paced Breathing</string>
    <string name="pmr">Pair Muscle Relaxation</string>
    <string name="tipp">TIPP</string>
    <string name="extreme">You seem highly agitated, try the AUDIO exercise</string>
    <string name="normal">You seem slightly agitated, try the TIPP exercise</string>
    <string name="choice">Why not try the OPPOSITE ACTION exercise?</string>


</resources>
