<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ActionFragment">


    <TextView
        android:id="@+id/action_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="72dp"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/timer_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="72dp"
        android:gravity="center_horizontal"
        android:text="@string/start"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/congs_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textAlignment="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/review_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="12dp"
        android:text="@string/review_reflection" />



</LinearLayout>