<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SelectorActivity"
    android:background="@color/lighter_purple">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="118dp"
        android:text="@string/select_exercise"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/recommender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="13dp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/recommender"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/button_oa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@color/medium_purple"
            android:onClick="startOppositeAction"
            android:text="@string/opposite_action" />

        <Button
            android:id="@+id/button_ps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@color/medium_purple"
            android:onClick="startProblemSolving"
            android:text="@string/tipp" />

        <Button
            android:id="@+id/button_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medium_purple"
            android:onClick="startAudioExercise"
            android:text="@string/audio_exercise" />

    </LinearLayout>







</RelativeLayout>