<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ActionActivity">


    <TextView
        android:id="@+id/action_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="72dp"
        android:layout_marginStart="12dp"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/timer_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="72dp"
        android:gravity="center_horizontal"
        android:text="@string/start"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/congs_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textAlignment="center"
        android:visibility="gone" />


    <TextView
        android:id="@+id/reflection_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/go_to_reflection"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/dark_purple"
        android:textColorLink="@color/dark_purple" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:text="@android:string/cancel"
        android:onClick="cancelExercise"
        android:background="@color/medium_purple"
        android:layout_gravity="bottom"/>


</LinearLayout>